# plover-trl-plugin

./: README.rst  plover_trl_plugin.py  rules.cson  setup.cfg  setup.py
plover_trl_plugin/: system.py
