[metadata]
name = plover-trl-plugin
version = 0.0.1
description = Turkish steno theory
long_description = file: README.rst
author = Vefa T.
url = https://github.com/vefat/plover-trl-plugin
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
py_modules =
  plover_trl_plugin

[options.entry_points]
plover.system =
  Trl = plover_trl_plugin
